Fix overflow-x

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
   background-color: white;
   color: #2C3E50;
   margin: 0;
+  overflow-x: hidden;
 }
 
 p.indented {
